services/crosschain/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bridge-security
  labels:
    name: bridge-security
    app: cross-chain-bridge-security
